--- a/beatsgame/src/main/res/layout/fragment_game.xml
+++ b/beatsgame/src/main/res/layout/fragment_game.xml
@@ -10,8 +10,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="60dp"
+        app:layout_constraintBottom_toTopOf="@id/caption"
         android:textSize="50dp"
         android:textStyle="bold"
         android:text="BEATS" />
@@ -22,7 +21,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title"
+        app:layout_constraintBottom_toTopOf="@id/llGroup"
+        android:layout_marginBottom="26dp"
         android:text="Psychomotor" />
 
     <View
@@ -42,7 +42,8 @@
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintStart_toEndOf="@+id/center"
-        app:layout_constraintTop_toBottomOf="@id/caption">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
             android:layout_width="150dp"
@@ -67,7 +68,8 @@
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toStartOf="@id/center"
-        app:layout_constraintTop_toBottomOf="@id/caption">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <ImageView
             android:layout_width="150dp"
@@ -87,15 +89,14 @@
 
     <TextView
         android:id="@+id/txtStatus"
-        android:textSize="12sp"
-        android:text="You are connected to server XXYYZZ"
+        android:textSize="10sp"
+        android:text="SID 2019"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
 
     <LinearLayout
         android:background="#CC000000"
