--- a/beatsgame/src/main/res/layout/fragment_game.xml
+++ b/beatsgame/src/main/res/layout/fragment_game.xml
@@ -93,8 +93,20 @@
         android:text="SID 2019"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnChangeUser"
         android:layout_margin="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/btnChangeUser"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Change User"
+        android:textColor="#FFF"
+        android:paddingRight="15dp"
+        android:paddingLeft="15dp"
+        android:background="#FF8A65"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
